test/files/neg/t1168.scala
class tor {
  def r_= = 4
}

class child extends tor {
  val r_= = 4
}
